# freeman

./: README.md  analysis_options.yaml  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/liyin/freeman/: MainActivity.java  ServiceUtils.java
android/app/src/main/java/com/liyin/freeman/service/: KeepAliveJobService.java  KeepAliveReceiver.java  KeepAliveService.java  LocalForegroundService.java  MyBinder.java  RemoteForegroundService.java
assets/: welcome.json
assets/doc/: privacy_policy_en.md  privacy_policy_zh.md
lib/: binding_attach.dart  common.dart  constants.dart  dhtclient.dart  global.dart  main.dart  my_app_settings.dart  my_main_app.dart
lib/common/: check.dart  common_bar.dart  common_button.dart  route.dart  ui.dart  utils.dart
lib/cpp/: freemanffi.cpp  freemanffi.h
lib/model/: chat_data.dart  chat_list_data.dart  contacts.dart  conversations.dart  data.dart  message_elem_type.dart  messages.dart  notice.dart  posts.dart  store.dart  user.dart  v2_tim_conversation.dart  v2_tim_group_at_info.dart  v2_tim_group_member_info.dart  v2_tim_img_elem.dart  v2_tim_message.dart  v2_tim_message_file.dart  v2_tim_message_voice.dart  v2_tim_text_elem.dart  v2_tim_user_full_info.dart
lib/ui/: about.dart  app_setting_page.dart  content_msg.dart  feature_store_secrets.dart  home_page.dart  logger_viewer.dart  login.dart  monetization_inline_banner_ad_ex.dart  my_route.dart  (+9 more)
linux/: CMakeLists.txt  my_application.cc
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+84 files in other folders)
